crates/aiy-core/src/authority/snapshots/aiy_core__authority__execution_time_estimator__tests__execution_time_observer_v98.snap
---
source: crates/aiy-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 98
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 8
          - secs: 0
            nanos: 30000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 9
          - secs: 0
            nanos: 27000000
      stake_weighted_median:
        secs: 0
        nanos: 28000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 10
          - secs: 0
            nanos: 55000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 55000000
  - - SplitCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 78000000
        - - 6
          - secs: 0
            nanos: 57000000
        - - 10
          - secs: 0
            nanos: 20000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 21000000
        - - 8
          - secs: 0
            nanos: 94000000
        - - 10
          - secs: 0
            nanos: 95000000
      stake_weighted_median:
        secs: 0
        nanos: 94000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 981000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 8
          - secs: 0
            nanos: 417000000
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 417000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 685000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 476000000
  - - transfer_objects_3_items
    - secs: 0
      nanos: 376000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 122000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 110000000
  - - make_move_vec_4_elements
    - secs: 0
      nanos: 140000000
  - - mixed_commands
    - secs: 0
      nanos: 405000000
  - - upgrade_package
    - secs: 0
      nanos: 981000000
